[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logseq-site-builder"
version = "0.1.0"
description = "Convert a Logseq knowledge base into a static website"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pypandoc>=1.13",
    "jinja2>=3.1",
]

[project.scripts]
logseq-builder = "logseq_builder.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"logseq_builder" = ["templates/**/*", "templates/*", "static/**/*", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
